--- a/src/app/operation/operations-center/operations-center.component.html
+++ b/src/app/operation/operations-center/operations-center.component.html
@@ -8,7 +8,8 @@
 </div>
 
 <mat-accordion [multi]="true">
-	<mat-expansion-panel *ngFor="let experience of experiences; let i = index" [attr.data-index]="i" [expanded]="experience.expanded">
+	<mat-expansion-panel *ngFor="let experience of experiences; let i = index" [attr.data-index]="i"
+    [expanded]="isExpanded(experience)">
     <mat-expansion-panel-header>
 			<mat-panel-title>{{ experience.stock_data.code }}: {{ experience.stock_data.name }} ({{ experience.creation_date | date: "dd.MM.y" }})</mat-panel-title>
       <mat-panel-description>
