--- a/src/app/operation/operations-center/operations-center.component.html
+++ b/src/app/operation/operations-center/operations-center.component.html
@@ -18,7 +18,7 @@
     </mat-expansion-panel-header>
       <div class="row">
         <div class="col-5">
-          <zen-experience-card [experience]="experience"></zen-experience-card>
+          <zen-experience-card [experience]="experience" (onExperienceChanged)="updateExperience($event, i)"></zen-experience-card>
         </div>
         <div class="col-7">
           <zen-experience-edit [experience]="experience" (onEditExperience)="updateExperience($event, i)"></zen-experience-edit>
@@ -34,7 +34,7 @@
 					</mat-expansion-panel-header>
 						<div class="row">
 							<div class="col-5">
-								<zen-buy-card [buy]="buy"></zen-buy-card>
+                <zen-buy-card [buy]="buy" (onBuyChanged)="updateBuy($event, i, b)"></zen-buy-card>
 							</div>
 							<div class="col-7">
 								<zen-buy-edit [buy]="buy" (onEditBuy)="updateBuy($event, i, b)"></zen-buy-edit>
@@ -49,7 +49,7 @@
                 </mat-expansion-panel-header>
                   <div class="row">
                     <div class="col-5">
-                      <zen-sell-card [sell]="sell"></zen-sell-card> 
+                      <zen-sell-card [sell]="sell" (onSellChanged)="updateSell($event, i, b, s)"></zen-sell-card> 
                     </div>
                     <div class="col-7">
                       <zen-sell-edit [sell]="sell" (onEditSell)="updateSell($event, i, b, s)"></zen-sell-edit>
