--- a/src/app/operation/operations-center/operations-center.component.html
+++ b/src/app/operation/operations-center/operations-center.component.html
@@ -10,7 +10,7 @@
 <mat-accordion [multi]="true">
 	<mat-expansion-panel *ngFor="let experience of experiences; let i = index" [attr.data-index]="i"
     [expanded]="isExpanded(experience)">
-    <mat-expansion-panel-header>
+    <mat-expansion-panel-header [ngStyle]="{'background': getBackgroundColor(experience)}">
 			<mat-panel-title>{{ experience.stock_data.code }}: {{ experience.stock_data.name }} ({{ experience.creation_date | date: "dd.MM.y" }})</mat-panel-title>
       <mat-panel-description>
 				{{ experience.nickname }} - Click for details -
@@ -26,10 +26,10 @@
       </div>
 			<mat-accordion>
 				<mat-expansion-panel *ngFor="let buy of experience.buy_set; let b = index" [attr.data-index]="b" [expanded]="buy.expanded">
-					<mat-expansion-panel-header>
+					<mat-expansion-panel-header [ngStyle]="{'background': getBackgroundColor(buy)}">
 						<mat-panel-title>A buy from: {{ buy.creation_date  | date: "dd.MM.y" }}</mat-panel-title>
 						<mat-panel-description>
-							Gain: {{ buy.operation_gain_percent | number: '1.2-2' }} % - Click for details -
+              Gain: {{ buy.operation_gain_percent | number: '1.2-2' }} % - Click for details - {{ buy.nickname }}
 						</mat-panel-description>
 					</mat-expansion-panel-header>
 						<div class="row">
@@ -43,9 +43,10 @@
             <mat-accordion>
               <mat-expansion-panel *ngFor="let sell of buy.sell_set; let s = index" [attr.data-index]="s"
                 [expanded]="sell.expanded">
-                <mat-expansion-panel-header>
+                <mat-expansion-panel-header [ngStyle]="{'background': getBackgroundColor(sell)}">
                   <mat-panel-title>A sell from: {{ sell.creation_date | date: "dd.MM.y" }}</mat-panel-title>
-                  <mat-panel-description>Gain: {{ sell.stock_profit_percent | number: '1.2-2' }}% - Click for details</mat-panel-description>
+                  <mat-panel-description>Gain: {{ sell.stock_profit_percent | number: '1.2-2' }}% - Click for details -
+                    {{ sell.nickname }}</mat-panel-description>
                 </mat-expansion-panel-header>
                   <div class="row">
                     <div class="col-5">
