--- a/src/app/operation/sell-focus/sell-focus.component.html
+++ b/src/app/operation/sell-focus/sell-focus.component.html
@@ -7,89 +7,10 @@
   <div class="col-12">
     <div class="row mt-3" *ngFor="let sell of sells">
       <div class="col-5">
-        <div class="card" [ngStyle]="{'background': getBackgroundColor(sell)}">
-          <div class="card-body">
-            <p class="card-title">{{ sell.stock_data.code }}-{{ sell.stock_data.name }} ({{ sell.stock_data.owned }}) - {{ sell.nickname }} <span title="{{ getDateLapse(sell.creation_date) }}">({{ sell.creation_date | date: "dd.MM.y" }})</span></p>
-
-          <div class="card-text">
-            <div class="row">
-              <div class="col-6">
-                <ul>
-                  <li title="How much money will enter in the account">Sell Value: R$ {{ sell.sell_value | number: '1.2-2' }}</li>
-                  <li title="How much was gained. The buy price is the average price.">Result: R$ {{ sell.result |
-                    number: '1.2-2' }} / {{ sell.gain_percent | number: '1.2-2' }}%</li>
-                  <li title="How much we will lose(or maybe gain?) if the stop is hit.">Stop loss: R$ {{ sell.stop_loss_result |
-                    number: '1.2-2' }} / {{ sell.stop_loss_percent | number: '1.2-2' }}%</li>
-                  <li title="How much we will gain if the stop is hit.">Stop gain:<span *ngIf="sell.stop_gain_result"> R$ {{ sell.stop_gain_result |
-                      number: '1.2-2' }} / {{ sell.stop_gain_percent | number: '1.2-2' }}%</span></li>
-                  <li title="The total profit of the operation. Based on the buy price related to this sell only">Profit: R$ {{ sell.profit | number: '1.2-2' }} 
-                    / {{ sell.profit_percent | number: '1.2-2' }}%</li>
-                </ul>
-              </div>
-              <div class="col-6">
-                <ul>
-                  <li *ngIf="!sell.executed" title="The total profit of the operation. Based on the actual stock price related to this sell only">
-                    Stock Profit: R$ {{ sell.stock_profit | number: '1.2-2' }} / {{ sell.stock_profit_percent | number: '1.2-2' }}%</li>
-                  <li *ngIf="sell.executed" [ngClass]="{'list-group-item-success': getSoldColor(sell),
-                    'list-group-item-danger': !getSoldColor(sell)}" class="font-weight-bold text-center list-group-item-success">sold</li>
-                </ul>
-                <zen-edit-stock *ngIf="!sell.executed" [stockInput]="sell.stock_data" (onStockUpdated)="list($event)"></zen-edit-stock>
-              </div>
-            </div>
-          </div>
-
-          </div>
-        </div>
+        <zen-sell-card [sell]="sell" (onSellChanged)="list()"></zen-sell-card> 
       </div>
       <div class="col-7">
-        <form #sellForm="ngForm">
-          <div class="row">
-            <div class="col-6">
-              <div class="form-group">
-                <label for="amount">*Amount: <span *ngIf="stock && stock.owned">[{{ stock.owned }}]</span> </label>
-                <input type="text" class="form-control" id="amount" [(ngModel)]="sell.amount" name="amount" required>
-              </div>
-
-              <div class="form-group">
-                <label for="price">*Price: </label>
-                <input type="text" class="form-control" id="price" [(ngModel)]="sell.price" name="price" required>
-              </div>
-
-              <div class="form-group">
-                <label for="nickname">Nickname: </label>
-                <input type="text" class="form-control" id="nickname" [(ngModel)]="sell.nickname" name="nickname">
-              </div>
-
-              <div class="form-group">
-                <button class="btn btn-primary mr-1" type="button" (click)="edit(sell);" *ngIf="!sell.executed"
-                  [disabled]="!sellForm.form.valid">Edit</button>
-
-                <button class="btn btn-primary mr-1" type="button" (click)="execute(sell);" *ngIf="!sell.executed"
-                  [disabled]="!sellForm.form.valid">Execute</button>
-
-                <zen-archive [operation]="sell" (onOperationArchived)="list()"></zen-archive>
-              </div>
-
-            </div>
-            <div class="col-6">
-              <div class="form-group">
-                <label for="stop_loss">Stop loss: </label>
-                <input type="text" class="form-control" id="stop_loss" [(ngModel)]="sell.stop_loss" name="stop_loss">
-              </div>
-
-              <div class="form-group">
-                <label for="stop_gain">Stop gain: </label>
-                <input type="text" class="form-control" id="stop_gain" [(ngModel)]="sell.stop_gain" name="stop_gain">
-              </div>
-
-              <div class="form-group">
-                <input type="checkbox" class="form-input" id="archived" name="archived" [(ngModel)]="sell.archived"
-                                                                        [checked]="sell.archived">
-                <label for="checkbox">Archived</label>
-              </div>
-            </div>
-          </div>
-        </form>
+        <zen-sell-edit [sell]="sell" (onEditSell)="list()"></zen-sell-edit> 
       </div>
     </div>
   </div>
