--- a/src/app/account/account-footer/account-footer.component.html
+++ b/src/app/account/account-footer/account-footer.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-9">
     <ul class="m-0 p-0 list-unstyled account-size">
-      <li>Equity: R$ {{ account.equity | number: '1.2-2' }}</li>
+      <li>Equity: R$ {{ account.equity | number: '1.2-2' }}/{{ account.total_equity | number: '1.2-2' }}</li>
       <li>Operation cost: R$ {{ account.operation_cost_position | number: '1.2-2' }}</li>
     </ul>
   </div>
