Upgrades in design and functionality.

--- a/src/app/operation/operation-accordion/operation-accordion.component.html
+++ b/src/app/operation/operation-accordion/operation-accordion.component.html
@@ -1,6 +1,6 @@
 <div class="">
   <div class="">
-    <button class="btn btn-sm btn-outline-primary mr-2" (click)="acc.toggle('experience')">Experience</button>
+    <button title="Create an experiment" class="btn btn-sm btn-outline-primary mr-2 " (click)="acc.toggle('experience')"><i class="fa fa-flask"></i> </button>
     <!-- <button class="btn btn-sm btn-outline-primary mr-2" (click)="acc.toggle('buy')">Buy</button>
        - <button class="btn btn-sm btn-outline-primary mr-2" (click)="acc.toggle('sell')">Sell</button> -->
   </div>
