--- a/src/app/operation/quick-buy/quick-buy.component.html
+++ b/src/app/operation/quick-buy/quick-buy.component.html
@@ -1,2 +1,2 @@
-<button type="button" class="btn btn-primary" (click)="quickBuy();">Quick Buy
+<button title="Send a buy and execute in one step." type="button" class="btn btn-primary" (click)="quickBuy();">Buy
 </button>
