--- a/src/app/overview/operations-overview/operations-overview.component.html
+++ b/src/app/overview/operations-overview/operations-overview.component.html
@@ -2,40 +2,43 @@
 <div class="container-fluid">
 
 <zen-bootstrap-officer></zen-bootstrap-officer>
-<zen-operation-accordion (onOperationMade)="updateBuys()"></zen-operation-accordion>
 
-<hr>
   <section class="row">
     <div class="col-12">
-      <h3 style="color: rgba(0,0,0,0.6); text-shadow: 2px 8px 6px rgba(0,0,0,0.2), 0px -5px 35px rgba(255,255,255,0.3);">Boughts</h3>
+      <h4 style="color: rgba(0,0,0,0.6);">Buys</h4>
 
       <hr>
       <zen-buy-list [buys]="buys" (onOperationUpdated)="updateAll()"></zen-buy-list>
-      <hr>
     </div>
   </section>
 
 
   <!-- The experiences -->
  
-  <section class="row">
-    <div class="col-10 offset-1">
-      <h3 style="color: rgba(0,0,0,0.6); text-shadow: 2px 8px 6px rgba(0,0,0,0.2), 0px -5px 35px rgba(255,255,255,0.3);">Experiments</h3>
+  <section class="row mt-4">
+    <div class="col-12">
+      <div class="row">
+        <div class="col-2">
+          <h4 style="color: rgba(0,0,0,0.6);">Experiments</h4>
+        </div>
+        <div class="col-10">
+          <zen-operation-accordion (onOperationMade)="updateExperienceList()"></zen-operation-accordion>
+        </div>
+      </div>
       <zen-experience-list [experiences]="experiments"></zen-experience-list>
-      <hr>
     </div>
   </section>
 
 
-  <section class="row mb-5">
+  <section class="row mb-5 mt-4">
     <div class="col-12">
-      <h3 style="color: rgba(0,0,0,0.6); text-shadow: 2px 8px 6px rgba(0,0,0,0.2), 0px -5px 35px rgba(255,255,255,0.3);">Resume</h3>
+      <h4 style="color: rgba(0,0,0,0.6);">Wallet</h4>
       <hr>
       <zen-resume></zen-resume>
     </div>
   </section>
 
-  <div class="fixed-bottom text-center overview-footer">
+  <div class="fixed-bottom text-center overview-footer mt-3">
     <div class="row">
       <div class="col-6 text-left">
         <zen-irbr></zen-irbr>
