--- a/src/app/operation/buy-focus/buy-focus.component.html
+++ b/src/app/operation/buy-focus/buy-focus.component.html
@@ -9,7 +9,7 @@
           <zen-buy-card [buy]="buy" (onBuyChanged)="updateBuys()"></zen-buy-card>
         </div>
         <div class="col-7">
-          <zen-buy-edit [buy]="buy" (onBuyEdit)="updateBuys()"></zen-buy-edit>  
+          <zen-buy-edit [buy]="buy" (onEditBuy)="updateBuys()"></zen-buy-edit>  
         </div>
       </div>
     </div>
