--- a/src/app/operation/buy-card/buy-card.component.html
+++ b/src/app/operation/buy-card/buy-card.component.html
@@ -8,7 +8,7 @@
       <div class="row">
         <div class="col-6">
           <ul>
-            <li>Amount: {{ buy.amount }}</li>
+            <li>Amount: {{ buy.amount_available }}/{{ buy.amount }}</li>
             <li>Price(Of buy): R$ {{ buy.price | number: '1.2-2' }}/R$ {{ buy.operation_average_price | number: '1.2-2' }}</li>
             <li>Cost: R$ {{ buy.cost | number: '1.2-2' }}/R$ {{ buy.average_cost | number: '1.2-2' }}</li>
           </ul>
