--- a/src/app/operation/operations-center/operations-center.component.html
+++ b/src/app/operation/operations-center/operations-center.component.html
@@ -8,7 +8,7 @@
   </div>
 </div>
 
-<mat-accordion [multi]="true">
+<mat-accordion [multi]="true" class="parametersPanel">
 	<mat-expansion-panel *ngFor="let experience of experiences; let i = index" [attr.data-index]="i"
     [expanded]="isExpanded(experience)">
     <mat-expansion-panel-header [ngStyle]="{'background': getBackgroundColor(experience)}">
@@ -25,7 +25,7 @@
           <zen-experience-edit [experience]="experience" (onEditExperience)="retrieveExperience(experience, i)"></zen-experience-edit>
         </div>
       </div>
-			<mat-accordion [multi]="true">
+      <mat-accordion [multi]="true" class="parametersPanel">
 				<mat-expansion-panel *ngFor="let buy of experience.buy_set; let b = index" [attr.data-index]="b" [expanded]="buy.expanded">
 					<mat-expansion-panel-header [ngStyle]="{'background': getBackgroundColor(buy)}">
             <mat-panel-title>A buy from: {{ buy.creation_date  | date: "dd.MM.y" }} ({{ buy.amount_available }}/{{ buy.amount }})</mat-panel-title>
@@ -41,7 +41,7 @@
 								<zen-buy-edit [buy]="buy" (onEditBuy)="retrieveExperience(experience, i, b)"></zen-buy-edit>
 							</div>
 						</div>
-            <mat-accordion [multi]="true">
+            <mat-accordion [multi]="true" class="parametersPanel">
               <mat-expansion-panel *ngFor="let sell of buy.sell_set; let s = index" [attr.data-index]="s"
                 [expanded]="sell.expanded">
                 <mat-expansion-panel-header [ngStyle]="{'background': getBackgroundColor(sell)}">
