Improments on quicksell.

--- a/src/app/operation/buy-edit/buy-edit.component.html
+++ b/src/app/operation/buy-edit/buy-edit.component.html
@@ -14,7 +14,7 @@
       <div class="form-group">
         <button type="button" class="btn btn-primary mr-1" (click)="edit(buy);" [disabled]="!buyEditForm.form.valid">Edit
         </button>
-        <zen-quick-sell class="mr-1" [operation]="buy" (onOperationSold)="updateBuy()"></zen-quick-sell>
+        <zen-quick-sell class="mr-1" [operation]="getQuickSell()" (onOperationSold)="updateBuy()"></zen-quick-sell>
         <zen-note-modal [operation_pk]="buy.pk"></zen-note-modal>
       </div>  
     </div>
