--- a/src/app/operation/buy-edit/buy-edit.component.html
+++ b/src/app/operation/buy-edit/buy-edit.component.html
@@ -3,12 +3,12 @@
     <div class="col-6">
       <div class="form-group">
         <label for="amount">Amount: </label>
-        <input type="text" readonly="true" class="form-control" id="amount" [(ngModel)]="buy.amount" name="amount">
+        <input type="text" readonly="true" class="form-control form-control-sm border border-primary" id="amount" [(ngModel)]="buy.amount" name="amount">
       </div>
 
       <div class="form-group">
         <label for="price">Price: </label>
-        <input type="text" readonly="true" class="form-control" id="price" [(ngModel)]="buy.price" name="price">
+        <input type="text" readonly="true" class="form-control form-control-sm border border-primary" id="price" [(ngModel)]="buy.price" name="price">
       </div>
 
       <div class="form-group">
@@ -21,7 +21,7 @@
     <div class="col-6">
       <div class="form-group">
         <label for="nickname">Nickname: </label>
-        <input type="text" class="form-control" id="nickname" [(ngModel)]="buy.nickname" name="nickname">
+        <input type="text" class="form-control form-control-sm border border-primary" id="nickname" [(ngModel)]="buy.nickname" name="nickname">
       </div>
 
       <div class="form-group">
