--- a/src/app/operation/sell-card/sell-card.component.html
+++ b/src/app/operation/sell-card/sell-card.component.html
@@ -1,4 +1,4 @@
-<div class="card" [ngStyle]="{'background': getBackgroundColor(sell)}">
+<div class="card zen-card-class" [ngStyle]="{'background': getBackgroundColor(sell)}">
   <div class="card-body">
     <div class="row card-title">
       <div class="col-10">
