--- a/src/app/overview/operations-overview/operations-overview.component.html
+++ b/src/app/overview/operations-overview/operations-overview.component.html
@@ -5,7 +5,7 @@
 
   <section class="row">
     <div class="col-12">
-      <h4 style="color: rgba(0,0,0,0.6);">Buys</h4>
+      <h4 style="color: rgba(0,0,0,0.6);">Purchases</h4>
 
       <hr>
       <zen-buy-list [buys]="buys" (onOperationUpdated)="updateAll()"></zen-buy-list>
