--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -1,11 +1,11 @@
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
+<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 border-bottom box-shadow zen-menu-bg">
   <h5 class="my-0 mr-md-auto font-weight-normal"><a class="p-2 text-dark zen_menu retroshadow" href="/zenindex">ZT</a></h5>
 
   <nav class="my-2 my-md-0 mr-md-3">
     <a class="p-2 text-dark" href="/stock">Stock</a> |
     <a class="p-2 text-dark" href="/experience">Focus on Experiences</a> |
-    <a class="p-2 text-dark" href="/buy-focus">Focus on Buys</a> |
-    <a class="p-2 text-dark" href="/sell-focus">Focus on Sells</a> |
+    <a class="p-2 text-dark" href="/buy-focus">Focus on Purchases</a> |
+    <a class="p-2 text-dark" href="/sell-focus">Focus on Sales</a> |
     <a class="p-2 text-dark" href="/operations-center">Operations Center</a>
   </nav>
   <!-- <a class="btn btn-outline-primary" href="#">Sign up</a> -->
