--- a/src/app/operation/buy-list/buy-list.component.css
+++ b/src/app/operation/buy-list/buy-list.component.css
@@ -4,3 +4,9 @@ blurtext {
    color: transparent;
    text-shadow: 0 0 5px rgba(0,0,0,0.5);
 }
+
+.zen-card-class {
+  border-style: solid;
+  border-width: 5px;
+  border-color: #47A8FF;
+}
