--- a/src/app/operation/experience-card/experience-card.component.html
+++ b/src/app/operation/experience-card/experience-card.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card zen-card-class">
   <div class="card-body">
     <div class="row card-title">
       <div class="col-7">
