--- a/src/app/operation/quick-buy/quick-buy.component.html
+++ b/src/app/operation/quick-buy/quick-buy.component.html
@@ -1,2 +1,3 @@
-<button title="Send a buy and execute in one step." type="button" class="btn btn-primary" (click)="quickBuy();">Buy
+<button title="Send a buy and execute in one step." type="button" class="btn btn-primary" (click)="quickBuy();">Register
+  purchase
 </button>
