--- a/src/app/operation/sell-edit/sell-edit.component.html
+++ b/src/app/operation/sell-edit/sell-edit.component.html
@@ -3,17 +3,17 @@
             <div class="col-6">
               <div class="form-group">
                 <label for="amount">*Amount: <span *ngIf="stock && stock.owned">[{{ stock.owned }}]</span> </label>
-                <input type="text" class="form-control" id="amount" [(ngModel)]="sell.amount" name="amount" required>
+                <input type="text" class="form-control form-control-sm border border-primary" id="amount" [(ngModel)]="sell.amount" name="amount" required>
               </div>
 
               <div class="form-group">
                 <label for="price">*Price: </label>
-                <input type="text" class="form-control" id="price" [(ngModel)]="sell.price" name="price" required>
+                <input type="text" class="form-control form-control-sm border border-primary" id="price" [(ngModel)]="sell.price" name="price" required>
               </div>
 
               <div class="form-group">
                 <label for="nickname">Nickname: </label>
-                <input type="text" class="form-control" id="nickname" [(ngModel)]="sell.nickname" name="nickname">
+                <input type="text" class="form-control form-control-sm border border-primary" id="nickname" [(ngModel)]="sell.nickname" name="nickname">
               </div>
 
               <div class="form-group">
@@ -32,12 +32,12 @@
             <div class="col-6">
               <div class="form-group">
                 <label for="stop_loss">Stop loss: </label>
-                <input type="text" class="form-control" id="stop_loss" [(ngModel)]="sell.stop_loss" name="stop_loss">
+                <input type="text" class="form-control form-control-sm border border-primary" id="stop_loss" [(ngModel)]="sell.stop_loss" name="stop_loss">
               </div>
 
               <div class="form-group">
                 <label for="stop_gain">Stop gain: </label>
-                <input type="text" class="form-control" id="stop_gain" [(ngModel)]="sell.stop_gain" name="stop_gain">
+                <input type="text" class="form-control form-control-sm border border-primary" id="stop_gain" [(ngModel)]="sell.stop_gain" name="stop_gain">
               </div>
 
               <div class="form-group">
