--- a/src/app/operation/experience-card/experience-card.component.html
+++ b/src/app/operation/experience-card/experience-card.component.html
@@ -28,9 +28,10 @@
       <div class="row">
         <div class="col-5">
           <ul>
-            <li>Stop Loss: R$ {{ experience.stop_loss_result | number: '1.2-2' }}/ {{ experience.stop_loss_percent | number: '1.2-2' }}%</li>
-            <li>Target Gain: R$ {{ experience.target_gain | number:'1.2-2' }} / {{
-              experience.target_gain_percent | number: '1.2-2'}}%</li>
+            <li>Stop Loss: R$ <span [outerHTML]="experience.stop_loss_result | number: '1.2-2' | numberColor "></span>/ 
+              <span [outerHTML]="experience.stop_loss_percent | number: '1.2-2' | numberColor "></span>%</li>
+            <li>Target Gain: R$ <span [outerHTML]="experience.target_gain | number:'1.2-2' | numberColor"></span> /
+              <span [outerHTML]="experience.target_gain_percent | number: '1.2-2' | numberColor"></span>%</li>
             <li>Recommended Limit: R$ {{ experience.operation_limit | number:'1.2-2' }} </li>
           </ul>
         </div>
@@ -43,8 +44,8 @@
             <li><hr></li>
             <li>Stock price: R$ {{ experience.stock_data.price }}</li>
             <li>Stock cost: R$ {{ experience.stock_cost | number: '1.2-2' }}/R$ {{ experience.average_stock_cost | number: '1.2-2' }}</li>
-            <li>Stock profit: R$ {{ experience.experience_gain | number: '1.2-2' }}/{{
-              experience.experience_gain_percent | number: '1.2-2' }}%</li>
+            <li>Stock profit: R$ <span [outerHTML]="experience.experience_gain | number: '1.2-2' | numberColor "></span>/
+              <span [outerHTML]="experience.experience_gain_percent | number: '1.2-2' | numberColor"></span>%</li>
           </ul>
           <zen-edit-stock [stockInput]="experience.stock_data" (onStockUpdated)="updateExperiment()"></zen-edit-stock>
         </div>
