--- a/src/app/operation/buy-card/buy-card.component.html
+++ b/src/app/operation/buy-card/buy-card.component.html
@@ -1,6 +1,7 @@
 <div class="card zen-card-class" [ngStyle]="{'background': getBackgroundColor(buy)}">
   <div class="card-body">
-    <p class="card-title">{{ buy.stock_data.code }}-{{ buy.stock_data.name }} ({{ buy.stock_data.owned }}) - {{ buy.nickname }} 
+    <p class="card-title"><a href="http://www.fundamentus.com.br/detalhes.php?papel={{ buy.stock_data.code }}"
+        target="_blank">{{ buy.stock_data.code }}</a>-{{ buy.stock_data.name }} ({{ buy.stock_data.owned }}) - {{ buy.nickname }} 
       <span title="{{ getDateLapse(buy.creation_date) }}">({{ buy.creation_date | date: "dd.MM.y" }})</span>
     </p>
 
