--- a/src/app/operation/sell-card/sell-card.component.html
+++ b/src/app/operation/sell-card/sell-card.component.html
@@ -2,7 +2,7 @@
   <div class="card-body">
     <div class="row card-title">
       <div class="col-10">
-        {{ sell.stock_data.code }}-{{ sell.stock_data.name }} ({{ sell.stock_data.owned }}) - {{
+        <a href="http://www.fundamentus.com.br/detalhes.php?papel={{ sell.stock_data.code }}" target="_blank">{{ sell.stock_data.code }}</a>-{{ sell.stock_data.name }} ({{ sell.stock_data.owned }}) - {{
         sell.nickname }} <span title="{{ getDateLapse(sell.creation_date) }}">({{ sell.creation_date | date: "dd.MM.y" }})</span>
       </div>
       <div class="col-2">
